# fluvio

./: .dockerignore  Cargo.toml  DEVELOPER.md  Dockerfile  Makefile  ci_ng.sh
.github/workflows/: ci.yml  ci_ng.yml  publish_latest_docker.yml  publish_nightly_docker.yml  release.yml
k8-util/docker/: build.sh  fluvio.Dockerfile
k8-util/docker-image/fluvio-builder/: Dockerfile
k8-util/docker-image/rust-builder/: Dockerfile
k8-util/docker-image/sc/: Dockerfile
k8-util/docker-image/spu/: Dockerfile
src/cli/: Cargo.toml
src/cli/src/: lib.rs  root_cli.rs
src/client-rs/: Cargo.toml
src/client-rs/src/: admin.rs  consumer.rs  error.rs  lib.rs  params.rs  (+3 more)
src/k8-metadata/: Cargo.toml
src/k8-metadata/src/: lib.rs
src/k8-metadata/src/partition/: spec.rs  status.rs
src/k8-metadata/src/spg/: spec.rs  status.rs
src/k8-metadata/src/spu/: spec.rs  status.rs
src/k8-metadata/src/topic/: spec.rs  status.rs
src/metadata/: Cargo.toml
src/metadata/src/: lib.rs
src/metadata/src/api/: replica_msg.rs
src/metadata/src/core/: mod.rs
src/metadata/src/partition/: k8.rs  mod.rs  replica.rs  spec.rs  status.rs  store.rs
src/metadata/src/spg/: mod.rs  spec.rs  status.rs  store.rs
src/metadata/src/spg/k8/: mod.rs  spec.rs  status.rs
src/metadata/src/spu/: k8.rs  mod.rs  spec.rs  status.rs  store.rs
src/metadata/src/store/: actions.rs  context.rs  metadata.rs  mod.rs  store.rs
src/metadata/src/topic/: k8.rs  mod.rs  spec.rs  status.rs  store.rs
src/sc-api/: Cargo.toml
src/sc-core/: Cargo.toml
src/sc-k8/: Cargo.toml
tests/runner/: Cargo.toml
(+169 files in other folders)
