[package]
name = "k8-flv-metadata"
version = "2.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2018"
description = "Kubernets metadata objects for fluvio"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"

[lib]
name = "k8_metadata"

[dependencies]
log = "0.4.8"

k8-obj-metadata = { version = "1.0.0"}
k8-obj-core = { version = "1.1.0"}
k8-obj-app = { version = "1.1.0" }

